# mypostman

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  README_ZH.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/skills/pulse-mcp-guide/: SKILL.md
examples/ai-agent/: mcp-quickstart.md
examples/ai-agent/prompts/: api-workflow.txt
examples/ai-agent/workflows/: user-crud-test.yaml
memory/: env-variable-system.md
plans/: ai-agent-integration.md  response-extraction-plan.md  variable-injection-plan.md
src/: App.tsx  LogViewer.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: package-lock.json
src-tauri/pulse-core/: Cargo.toml
src-tauri/pulse-core/src/: cli.rs  io.rs  lib.rs  test_runner.rs
src-tauri/pulse-mcp/: Cargo.toml
src-tauri/pulse-mcp/src/: main.rs
src-tauri/pulse-mock-server/: Cargo.toml
src-tauri/pulse-mock-server/src/: main.rs
src-tauri/src/: cli.rs  lib.rs  main.rs  mock_server.rs  test_runner.rs
src/components/: AuthPanel.tsx  CollectionVariablesPanel.tsx  EnvironmentPanel.tsx  JsonEditor.tsx  JsonViewer.tsx  RequestPanel.tsx  ResponsePanel.tsx  SaveDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  TabBar.tsx  TestScriptDialog.tsx  WaterfallChart.tsx
src/hooks/: usePulse.ts
src/shortcuts/: defaults.ts
src/types/: index.ts
test-scripts/: mock-self-test.yaml
