[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pulse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mime = "0.3"
