[package]
name = "pulse-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse-mcp"
path = "src/main.rs"

[dependencies]
pulse-core = { path = "../pulse-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
