[package]
name = "pulse-mock-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse-mock-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1"
